Add grammar tokens, clickable music elements

--- a/abc-music/package.json
+++ b/abc-music/package.json
@@ -37,6 +37,13 @@
 				"scopeName": "source.abc",
 				"path": "./syntaxes/abc.tmGrammar.json"
 			}
+		],
+		"themes": [
+			{
+				"label": "ABC Music",
+				"uiTheme": "vs",
+				"path": "./themes/abc.color-theme.json"
+			}
 		]
 	},
 	"scripts": {
