--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "abc-music",
 	"displayName": "ABC Music Notation",
 	"description": "Syntax highlighting, live preview and print support for ABC Music Notation.",
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"engines": {
 		"vscode": "^1.44.0"
 	},
@@ -20,7 +20,8 @@
 	},
 	"activationEvents": [
 		"onCommand:abc-music.showMusicsheet",
-		"onCommand:abc-music.print"
+		"onCommand:abc-music.print",
+		"onLanguage:abc"
 	],
 	"publisher": "softaware",
 	"main": "./out/extension.js",
